# DeepSquare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml
include/: board.h  engine.h  evaluation.h  move.h  nnue.h  piece.h  simd_utils.h  uci.h
module/: board.cpp  engine.cpp  evaluation.cpp  move.cpp  nnue.cpp  piece.cpp  simd_utils.cpp  uci.cpp
